# rust-upnp

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: error.rs  lib.rs  syntax.rs
src/common/: headers.rs  http.rs  interface.rs  mod.rs  uri.rs  user_agent.rs  xml.rs
src/common/httpu/: builder.rs  mod.rs  request.rs  response.rs
src/common/soap/: mod.rs  protocol.rs
src/common/xml/: mod.rs  read.rs  write.rs
src/common/xml/dom_core/: error.rs  mod.rs  name.rs  rc_cell.rs  syntax.rs  tests.rs  trait_impls.rs  traits.rs
src/control/: mod.rs
src/description/: device.rs  mod.rs  service.rs  xml.rs
src/description/device/: mod.rs
src/description/service/: mod.rs
src/discovery/: mod.rs  notify.rs  protocol.rs  search.rs
src/eventing/: mod.rs
src/gena/: mod.rs
src/httpu/: builder.rs  mod.rs  protocol.rs  request.rs  response.rs
src/soap/: protocol.rs
src/ssdp/: mod.rs  notify.rs  protocol.rs  search.rs
src/utils/: headers.rs  interface.rs  mod.rs  user_agent.rs  xml.rs
