[package]
name = "upnp-rs"
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "Rust crate providing basic Universal Plug and Play (UPnP) protocol implementations"
documentation = "https://docs.rs/upnp/"
repository = "https://github.com/johnstonskj/rust-upnp.git"
license = "MIT"
readme = "README.md"
publish = true
default-run = "upnp"

[[bin]]
name = "upnp"
path = "src/bin/upnp.rs"
required-features = ["command_line"]

[features]
default = []
command_line = ["human-panic", "structopt", "env_logger"]

[dependencies]
ipnetwork = "0.16"
lazy_static = "1.4.0"
log = "0.4.8"
pnet = "0.25"
quick-xml = { version = "0.17", features = [ "serialize" ] }
regex = "1.3.4"
serde = { version = "1.0", features = [ "derive" ] }

# Command-Line feature dependencies
env_logger = { optional = true, version = "0.7" }
human-panic = { optional = true, version = "1.0" }
structopt = { optional = true, version = "0.3" }
