[package]
name = "upnp-rs"
version = "0.2.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
description = "Provides basic Universal Plug and Play (UPnP) protocol implementations"
keywords = ["networking", "protocol"]
categories = ["network-programming", "parser-implementations"]
documentation = "https://docs.rs/upnp/"
repository = "https://github.com/johnstonskj/rust-upnp.git"
license = "MIT"
readme = "README.md"
edition = "2018"
build = "build.rs"
publish = true
default-run = "upnp"

[[bin]]
name = "upnp"
path = "src/bin/upnp.rs"
required-features = ["command_line"]

[features]
default = []
command_line = ["human-panic", "structopt", "tracing-subscriber"]

[dependencies]
ipnetwork = "0.20"
lazy_static = "1.4.0"
os-version = "0.2"
pnet = {version = "0.33", features = ["std"] }
quick-xml = "0.26"
regex = "1.3"
reqwest = { version = "0.11", features = ["blocking"] }
thiserror = "1.0"
tracing = "0.1"

# Command-Line fature dependencies
human-panic = { optional = true, version = "1.0" }
structopt = { optional = true, version = "0.3" }
tracing-subscriber = { optional = true, version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.2"
